--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -54,6 +54,29 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_casting" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for movies_id -->
+      <div class="form-group">
+        <label for="movies_id" class="control-label">
+          Movies
+        </label>
+
+        <%= select_tag(:movies_id, options_from_collection_for_select(Movie.all, :id, :title), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for actor_id -->
+      <input type="hidden" name="actor_id" value="<%= @actor.id %>">
+
+      <button class="btn btn-block btn-success">
+        Create Casting
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
